kubernetes/apps/pegasus/pihole/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
spec:
  serviceName: pihole
  selector:
    matchLabels:
      app: pihole
  replicas: 1
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2022.09.4
        ports:
        - containerPort: 80
        - containerPort: 53
        #- containerPort: 67/udp # Only required for DHCP
        livenessProbe:
          httpGet:
            port: 80
          initialDelaySeconds: 5

        volumeMounts:
        - name: pihole-data
          mountPath: /etc/pihole
        - name: dnsmasq-data
          mountPath: /etc/dnsmasq.d
      volumes:
      - name: pihole-data
        persistentVolumeClaim:
          claimName: pihole-data
      - name: dnsmasq-data
        persistentVolumeClaim:
          claimName: dnsmasq-data
