kubernetes/apps/pegasus/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  ports:
  - port: 80
    targetPort: 80
  - port: 53
    targetPort: 53
    protocol: TCP
  - port: 53
    targetPort: 53
    protocol: UDP
  selector:
    app: pihole
